Fixed status formatting on Firefox/IE

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -86,7 +86,6 @@ body {
 	margin: 2em 2em 1em;
 	padding: 1em;
 	width: 12em;
-	position: fixed;
 	float: left;
 	border-radius: 0.6em;
 }
